Update nlu data zig intent

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -1575,6 +1575,7 @@ nlu:
   examples: |
     - je peux réserver une cabine pour  3 adulte ( une étranger résidents et deux non résidents) et un enfant. Départ vendredi 3. Nov.; 20 h à Dakar. 
     - Je voudrais voyager
+    - Bonjour. Le bateau DAkar -Zig va t-il reprendre les rotations en février ? MErci !
     - Bonjour, le ferry Aline sitoe diata fonctionne t il actuellement ?
     - Comment la réservation du bateau diambogne suis sénégalais
     - Je veux une réservation
