add trafic navire

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -5,6 +5,7 @@ nlu:
     - LA GRANDE SIERRA LEONE
     - quelle est la date du depart de grand africa pour Conakry
     - Accostage des navires de céréales
+    - Trafic portuaire
     - Mouvement accostage
     - position actuelle du navire JONATHAN P
     - date d'arrivée du navire JONATHAN P
