--- a/credentials.yml
+++ b/credentials.yml
@@ -19,15 +19,16 @@ socketio:
   session_persistence: true
 
 
-# telegram:
-#   access_token: "1899642229:AAFo3nNMgVu1OTHgDV7kwmvuKWIUylRGSjI"
-#   verify: "portDeDakarBot"
-#   webhook_url:  "https://ab2b7dd5fa36.ngrok.io/webhooks/telegram/webhook"
-
-# twilio:
-#   account_sid: "AC6cf52f9ee40509912a189b1a33366a83"
-#   auth_token: "f794e0d81569951e746b0cd082869fae"
-#   twilio_number: "whatsapp:+14155238886"
+telegram:
+  access_token: "5160964652:AAHcDz_EBW18rxp0GaRqZ5mp5OvvKYdu24Q"
+  verify: "portdakarbot"
+  webhook_url:  "https://chatbot.portdakar.sn/webhooks/telegram/webhook"
+  
+# https://chatbot.portdakar.sn/webhooks/twilio/webhook
+twilio:
+  account_sid: "AC662354aaebff3aa68e9169afe5bd6530"
+  auth_token: "883e85647f45b205eac2ebdaea262ddf"
+  twilio_number: "whatsapp:+14155238886"
 
 
 
