add Je comprend votre message

--- a/domain.yml
+++ b/domain.yml
@@ -615,7 +615,7 @@ responses:
       - title: "👎"
         payload: "/mauvaise_reponse" 
   utter_please_rephrase:
-  - text: "Je comprend votre question mais je ne suis pas en mesure de vous répondre."
+  - text: "Je comprend votre message mais je ne suis pas en mesure de vous répondre."
   # - text: "Désolé, je ne comprends pas cela. Je continue d'apprendre. Pourriez-vous le reformuler s'il vous plaît?"
     # buttons: 
     #   - title: "Menu principal"
