--- a/domain.yml
+++ b/domain.yml
@@ -204,7 +204,7 @@ responses:
   utter_mauvaise_reponse_1:
   - text: " Veuillez reformuler votre question s'il vous plait !"
   utter_mauvaise_reponse_2:
-  - text: "Ou bien, veuillez-vous adresser au Service Clientèle via le numéro **+221 33 849 45 45** ou l'email **orientationclient@portdakar.sn**"
+  - text: "Ou bien, veuillez-vous adresser au Service Clientèle via le numéro **+221 33 849 45 45** ou l'email: **orientationclient@portdakar.sn**"
     buttons:
       - title: "Menu principal"
         payload: "/menu_principal"
